# Free-fall-simulator

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  Clock.cpp  Clock.h  Draw.cpp  Draw.h  Events.cpp  Events.h  Freefall_object.cpp  Freefall_object.h  Text.cpp  Text.h  User_input_text.cpp  User_input_text.h  main.cpp
